crates/wolf_wir/tests/snapshots/wir_dumps__dump__io.snap
---
source: crates/wolf_wir/tests/wir_dumps.rs
expression: "wolf_wir::print_module(&m)"
---
decl @put(i64, io)

fn @main(io) -> i64 {
b0(%0: io):
  %1 = iconst.i64 42
  %2 = call @put(%1, %0)
  %3 = call @put(%1, %2)
  %4 = iconst.i64 0
  ret %4
}
