crates/wolf_wir/tests/snapshots/wir_dumps__dump__rc_ops.snap
---
source: crates/wolf_wir/tests/wir_dumps.rs
assertion_line: 57
expression: "wolf_wir::print_module(&m)"
---
fn @share(read ptr, mem.r0) -> i64 {
b0(%0: ptr, %1: mem.r0):
  %2: mem.r0 = rc.dup %0, %1
  %3 = load.i64 %0, %2
  %4: mem.r0 = rc.drop %0, %2
  %5 = load.i64 %0, %4
  %6 = iadd.chk %3, %5
  ret %6
}
