crates/wolf_wir/tests/snapshots/wir_dumps__dump__tokens.snap
---
source: crates/wolf_wir/tests/wir_dumps.rs
expression: "wolf_wir::print_module(&m)"
---
fn @fill(mut ptr, i64, i64, mem.r0) {
b0(%0: ptr, %1: i64, %2: i64, %3: mem.r0):
  %4 = iconst.i64 0
  jmp b1(%4, %3)
b1(%5: i64, %6: mem.r0):
  %7 = icmp.slt %5, %1
  br %7, b2, b3
b2:
  %8 = ptr.off %0, %5, 8
  %9 = store.i64 %2, %8, %6
  %10 = iconst.i64 1
  %11 = iadd.chk %5, %10
  jmp b1(%11, %9)
b3:
  ret
}
